crates/pg_syntax/tests/snapshots/postgres_regress/json@109.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (test_json->>'field3') is null as expect_true\nfrom test_json\nwhere json_type = 'object';"
---
SelectStmt@0..95
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    Ascii40@7..8 "("
    NullTest@8..37
      AExpr@8..28
        ColumnRef@8..17
          Ident@8..17 "test_json"
        Op@17..20 "->>"
        AConst@20..28
          Sconst@20..28 "'field3'"
      Ascii41@28..29 ")"
      Whitespace@29..30 " "
      Is@30..32 "is"
      Whitespace@32..33 " "
      NullP@33..37 "null"
    Whitespace@37..38 " "
    As@38..40 "as"
    Whitespace@40..41 " "
    Ident@41..52 "expect_true"
  Newline@52..53 "\n"
  From@53..57 "from"
  Whitespace@57..58 " "
  RangeVar@58..67
    Ident@58..67 "test_json"
  Newline@67..68 "\n"
  Where@68..73 "where"
  Whitespace@73..74 " "
  AExpr@74..94
    ColumnRef@74..83
      Ident@74..83 "json_type"
    Whitespace@83..84 " "
    Ascii61@84..85 "="
    Whitespace@85..86 " "
    AConst@86..94
      Sconst@86..94 "'object'"
  Ascii59@94..95 ";"

