crates/pg_syntax/tests/snapshots/postgres_regress/json@110.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (test_json->3) is null as expect_false\nfrom test_json\nwhere json_type = 'array';"
---
SelectStmt@0..87
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    Ascii40@7..8 "("
    NullTest@8..29
      AExpr@8..20
        ColumnRef@8..17
          Ident@8..17 "test_json"
        Op@17..19 "->"
        AConst@19..20
          Iconst@19..20 "3"
      Ascii41@20..21 ")"
      Whitespace@21..22 " "
      Is@22..24 "is"
      Whitespace@24..25 " "
      NullP@25..29 "null"
    Whitespace@29..30 " "
    As@30..32 "as"
    Whitespace@32..33 " "
    Ident@33..45 "expect_false"
  Newline@45..46 "\n"
  From@46..50 "from"
  Whitespace@50..51 " "
  RangeVar@51..60
    Ident@51..60 "test_json"
  Newline@60..61 "\n"
  Where@61..66 "where"
  Whitespace@66..67 " "
  AExpr@67..86
    ColumnRef@67..76
      Ident@67..76 "json_type"
    Whitespace@76..77 " "
    Ascii61@77..78 "="
    Whitespace@78..79 " "
    AConst@79..86
      Sconst@79..86 "'array'"
  Ascii59@86..87 ";"

