crates/pg_syntax/tests/snapshots/postgres_regress/json@113.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": [{\"b\": \"c\"}, {\"b\": \"cc\"}]}'::json -> null::int;"
---
SelectStmt@0..61
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..60
    AExpr@7..60
      TypeCast@7..47
        AConst@7..41
          Sconst@7..41 "'{\"a\": [{\"b\": \"c\"}, { ..."
        Typecast@41..43 "::"
        TypeName@43..47
          Ident@43..47 "json"
      Whitespace@47..48 " "
      Op@48..50 "->"
      Whitespace@50..51 " "
      TypeCast@51..60
        AConst@51..55
          NullP@51..55 "null"
        Typecast@55..57 "::"
        TypeName@57..60
          IntP@57..60 "int"
  Ascii59@60..61 ";"

