crates/pg_syntax/tests/snapshots/postgres_regress/json@116.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": [{\"b\": \"c\"}, {\"b\": \"cc\"}]}'::json -> 'z';"
---
SelectStmt@0..55
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..54
    AExpr@7..54
      TypeCast@7..47
        AConst@7..41
          Sconst@7..41 "'{\"a\": [{\"b\": \"c\"}, { ..."
        Typecast@41..43 "::"
        TypeName@43..47
          Ident@43..47 "json"
      Whitespace@47..48 " "
      Op@48..50 "->"
      Whitespace@50..51 " "
      AConst@51..54
        Sconst@51..54 "'z'"
  Ascii59@54..55 ";"

